<resources>
    <string name="app_name">SYM - Labo 2</string>
    <string name="title_activity_compress">CompressActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="asyncrone">Asyncrone</string>
    <string name="diff_r_e">Différée</string>
    <string name="s_rialisation">Sérialisation</string>
    <string name="compress_e">Compressée</string>
    <string name="graphql">GraphQL</string>
    <string name="envoyer">Envoyer</string>
    <string name="entrez_votre_texte">Entrez votre texte</string>
    <string name="Send">Send</string>
    <string name="format_of_serialization">Format of serialization</string>
    <string name="protobuf">ProtoBuf</string>
    <string name="json">JSON</string>
    <string name="xml">XML</string>
    <string name="mobile">Mobile</string>
    <string name="work">Work</string>
    <string name="home">Home</string>
    <string name="phone_type">Phone type</string>
    <string name="mail_address">(mail address)</string>
    <string name="middle_name">(middle_name)</string>
    <string name="firstname">(firstname)</string>
    <string name="name">(name)</string>
    <string name="message">message</string>
</resources>